--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ File Name: styles.css
 */
 
 /* CSS Reset */
-body, header, nav, main, footer, img, h1, h3 {
+body, header, nav, main, footer, img, h1, h3, ul {
     margin: 0;
     padding: 0;
     border: 0;
@@ -21,19 +21,82 @@ img {
     display: block;
 }
 
+/* Style rules for mobile viewport */
+
+
+/* Style rules to show mobile class and hide tab-desk class */
+.mobile {
+    display: block;
+}
+
+/* Style rules for header area */
+.mobile h1 ,.mobile h3{
+    padding: 2%;
+    text-align: center
+}
+
+.mobile h1 {
+    font-family: "Emblema One", system-ui;
+}
+
+.mobile h3 {
+    font-family: "Lora", serif;
+}
+
+.tab-desk {
+    display: none;
+}
+
+/* Style rules for main content */
+main {
+    padding: 2%;
+    
+}
+
+main p {
+    font-size: 1.25em;
+    font-family: "Lora", serif;
+}
+
+main h3 {
+    padding-top: 2%;
+}
+
+main ul {
+    list-style-type: square;
+}
+
+.link{
+    color: #4d3319;
+    text-decoration: none;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.action {
+    font-size: 1.75em;
+    font-weight: bold;
+    text-align: center;
+}
+
+#contact {
+    text-align: center;
+}
+
 /* Style rules for navigation area */
 nav {
     background-color: #2a1f14;
 }
 
 nav ul {
-    list-style-type: none;
     margin: 0;
     text-align: center;
 }
 
 nav li {
-    display: inline-block;
+    display: block;
+    border-top-width: 0.5px;
+    border-top-color: #f6eee4;
     font-size: 1.5em;
     font-family: Geneva, Arial, sans-serif;
     font-weight: bold;
@@ -77,8 +140,29 @@ main ul {
     text-align: center;
 }
 
+.round {
+    border-radius: 6px;
+}
+
+#info ul {
+    margin-left: 10%;
+}
+
 #contact {
     text-align: center;
+}
+
+.tel-link {
+    background-color: #2a1f14;
+    padding: 2%;
+    width: 80%;
+    margin: 0 auto 0 auto;
+}
+
+.tel-link a {
+    color: #f6eee4;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 /* Style rules for footer content */
